<resources>
    <string name="app_name">TravelExpertsAndroid</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_credentials">The supplied credentials are incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_msg">Welcome to Travel Experts</string>
    <string name="current_package_deals">Current Package Deals:</string>
    <string name="package_details">Package Details</string>
    <string name="number_of_travellers">Number of Travellers:</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_bookings">My Bookings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="home_phone">Home Phone</string>
    <string name="bus_phone">Bus. Phone</string>
    <string name="email">Email</string>
    <string name="canada">Canada</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string-array name="provinces">
        <item>Select Province...</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>

    <!-- Items used to populate the spinner for the number of travellers -->
    <string-array name="array_num_travellers">
        <item>Select...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
